Resolved issues with front page list with alignment when adding date text. Resolved issue with Splide text with overflow. Resolved issue with white space for Game data detail link pages due to white space issue.

--- a/src/index.css
+++ b/src/index.css
@@ -19,18 +19,24 @@ code {
     monospace;
 }
 
-li {
-  list-style-type:'';
-  margin: 0;
-  padding: 0;
-}
-
 .screenshot {
   height: auto;
   width: auto;
 }
 
 /* Splide */
+.card-title{
+  text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.card-text:last-child {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
 .splide__slide img {
   width: 100%;
   height: 100%;
@@ -43,6 +49,12 @@ li {
 
 
 /* home page lists */
+li {
+  list-style-type:'';
+  margin: 0;
+  padding: 0;
+}
+
 .list ul{
   margin: 0;
   padding: 0;
@@ -55,6 +67,7 @@ li {
 
 .list img{
   margin-right: 2rem;
+  flex-direction: column;
 }
 
 .list a{
@@ -65,6 +78,20 @@ li {
   width: auto;
   height: 75px;
 
+}
+
+.listCon{
+ display: flex;
+}
+.listTxt{
+  display: flex;
+  flex-direction: column;
+  color: #858585;
+}
+
+.listRow{
+  display: flex;
+  flex-direction: row;
 }
 
 .word{
